--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,7 @@ services:
   - type: web
     name: flask-chatbot4
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: gunicorn app:app
