--- a/render.yaml
+++ b/render.yaml
@@ -5,5 +5,5 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: python app.py
     pythonVersion: 3.10
