--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Flask==2.2.5
-gunicorn==21.2.0
-openai==1.14.3
-requests==2.31.0
+Flask==2.3.2
+openai==1.16.0
+google-cloud-texttospeech==2.14.1
 python-dotenv==1.0.1
-# force rebuild
