--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-Flask==2.3.2
-openai==1.78.1
-google-cloud-texttospeech==2.14.1
-python-dotenv==1.0.1
+Flask==2.2.5
 flask-cors==3.0.10
+openai>=1.0.0
+google-cloud-texttospeech>=2.14.1
