--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==2.2.5
-flask-cors==3.0.10
-openai>=1.0.0
-google-cloud-texttospeech>=2.14.1
-python-dotenv
-flask-limiter
+Flask==2.3.3
+Flask-Cors==4.0.0
+Flask-Limiter==3.5.0
+openai==1.16.0
+google-cloud-texttospeech==2.15.1
+python-dotenv==1.0.1
