--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ flask-limiter==2.9.2
 google-cloud-texttospeech==2.15.1
 
 # Supabase Python クライアント
-supabase>=2.0.0,<3.0.0  
+supabase
 
 # 他に使っているパッケージがあれば、この下に追記してください。
 
